# cs-repo

./: .coveragerc  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  SETUP.md  TEAM_SETUP.md  USER_GUIDE.md  biome.json  claude.md  install.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: at-risk.md  check-setup.md  commands.md  customer-search.md  customer.md  (+40 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  pull_request_template.md
docs/: ARCHITECTURE.md  COMMAND_GUIDE.md  CONTENT_STANDARDS.md  MCP_PRECISION_NOTES.md  STANDUP_FORMAT.md  TROUBLESHOOTING.md  audit-cadence.md  github-repo-audit.md
examples/: MANAGED_SETTINGS.md  managed-settings.example.json
hooks/: README.md  _git.py  _stdin.py  audit-log.py  block-attribution.py  branch-enforcer.py  compact-reinject.py  config-change-audit.py  file-protector.py  lint-after-edit.py  notify.py  pr-template-reminder.py  push-guard.py  secret-scan.py  session-to-obsidian.py
lib/: copy-to-desktop.js  csv-export.js  data-loader.js  report-theme.js  report_charts.py
patterns/: delegation-first.md
prompts/: at-risk-template.md  daily-update.md  eow-update.md  expansion-template.md  health-score-template.md  intercom-report-template.md  midweek-update.md  onboarding-report-template.md  renewals-report-template.md  week-start-update.md
reports/: customer-health.js  executive-summary.js  intercom-daily.js  intercom-monthly.js  intercom-quarterly.js  intercom-weekly.js  intercom-yeartodate.js  onboarding-monthly.js  onboarding-quarterly.js  onboarding-status.js  onboarding-weekly.js  onboarding-yearly.js  qbr.js  renewal-health.js  renewals-nextmonth.js  renewals-nextquarter.js  renewals-thismonth.js
scripts/: REWRITE-HISTORY.md  cleanup-data-outputs.sh  rewrite-history.sh  rewrite-rules.example.txt  setup-desktop.bat  setup-desktop.ps1  setup-desktop.sh
skills/: README.md  setup.md
slabstack-cs/: CLAUDE.md  README.md
tests/: conftest.py  test_agents_frontmatter.py  test_commands_frontmatter.py  test_commands_readme_parity.py  test_hooks_readme_parity.py  test_no_stale_terms.py  test_report_categories.py  test_report_column_widths.py  test_setup_desktop_parity.py
(+66 files in other folders)
